--- a/views/index.hbs
+++ b/views/index.hbs
@@ -27,8 +27,8 @@
                     <label id="name-label" for="name">Fingerprint Hash (Generated automatically for demonstration,
                         To be fetched from reader in real life application.)</label>
                     <input type="text" name="fingerprint" id="fingerprint"
-                        placeholder="44863b03e9909b7100e05b02526909a346fd7455183f6619e0fe6198c89981e0"
-                        class="form-control" required>
+                        placeholder="CLICK ON READ FINGERPRINT TO SIMULATE FINGERPRINT READING AND COPY THE HASH"
+                        class="form-control"  required>
                 </div>
             </div>
             <div class="col-md-4">
