--- a/views/success.hbs
+++ b/views/success.hbs
@@ -1,4 +1,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+<br>
+<br>
+
 <table>
     <caption>CERTIFICATE VALID</caption>
     <thead>
@@ -27,7 +30,7 @@
             <td>{{this.even}}</td>
             <td>{{this.comment}}</td>
             <td>{{this.authority}}</td>
-            <td>{{this.certificateType}}</td>
+            <td>{{this.role}}</td>
         </tr>
         {{/each}}
     </tbody>
@@ -131,8 +134,5 @@
 
 
     /* general styling */
-    body {
-        font-family: "Open Sans", sans-serif;
-        line-height: 1.25;
-    }
+   
 </style>
