--- a/views/index.hbs
+++ b/views/index.hbs
@@ -70,7 +70,7 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <label id="Phone-label" for="institution">Phone Number</label>
-                    <input type="number" name="Phone" id="Phone" placeholder="Enter Phone" class="form-control"
+                    <input type="tel" name="Phone" id="Phone" placeholder="Enter Phone" class="form-control"
                         required>
                 </div>
             </div>
