--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,7 +14,7 @@
     <header class="header">
       <div class="col-md-3">
         {{#if isLoggedIn}}
-        <a href="/logout" class="btn btn-primary btn-block">Logout</a>
+        <a href="/logout" class="btn btn-danger btn-block">Logout</a>
         {{else}}
         <a href="/login" class="btn btn-primary btn-block">Login</a>
         {{/if}}
